<resources>
    <string name="app_name">RisingTest</string>

    <!-- Main -->
    <string name="main_btm_nav_home">홈</string>
    <string name="main_btm_nav_search">검색</string>
    <string name="main_btm_nav_register">등록</string>
    <string name="main_btm_nav_talk">번개톡</string>
    <string name="main_btm_nav_my_page">MY</string>

    <!--    login-->
    <string name="login_lightning">"취향을 잇는 거래, \n 번개장터"</string>
    <string name="login_security">안전하게 취향을 잇습니다.</string>
    <string name="login_box">편리하게 취향을 잇습니다.</string>
    <string name="login_heart">번개장터에서 취향을 거래해보세요.</string>
    <string name="login_lightning_detail">"요즘 유행하는 메이저 취향부터 \n 나만 알고싶은 마이너 취향까지"</string>
    <string name="login_security_detail">번개톡, 번개페이로 거래의 시작부터 끝까지 안전하게</string>
    <string name="login_box_detail">포장택배 서비스로 픽업/포장/배송을 한번에</string>
    <string name="login_heart_detail">지금 바로 번개장터에서 당신의 취향에 맞는 아이템들을 찾아보세요!</string>
    <string name="login_kakaotalk">카카오톡으로 시작하기</string>
    <string name="login_other">다른 방법으로 로그인</string>
    <string name="login_facebook">페이스북으로 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_phone">본인인증으로 로그인</string>
    <string name="phone_number">휴대폰번호</string>

    <!--    main-->
    <string name="main_recommend_proudct">추천상품</string>
    <string name="main_brand">브랜드</string>

</resources>