<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_main_menu_home_on"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/ic_main_menu_search_off"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_search" />

    <item
        android:id="@+id/menu_main_btm_nav_register"
        android:icon="@drawable/ic_main_menu_register_off"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_register" />

    <item
        android:id="@+id/menu_main_btm_nav_talk"
        android:icon="@drawable/ic_main_menu_talk_off"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_talk" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_main_menu_mypage_off"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page" />

</menu>
